Edit elasticsearch mapping

--- a/config/dit_elsevier_meta.yaml
+++ b/config/dit_elsevier_meta.yaml
@@ -1,12 +1,12 @@
 # Elsevier configuration
 
 executor:
-  publisher_name: elsevier
+  res_set: elsevier
   res_type: metadata
   resource_dir: /Users/giorgio/Desktop/dit # root dir for sitemaps
   metadata_dir: resourcesync/elsevier/metadata # rel dir for sitemaps
   res_root_dir: /Users/giorgio/Desktop/dit # root dir for resources
-  url_prefix: http://giorgios-macbook-pro.local:8888/ciao
+  url_prefix: http://giorgios-macbook-pro.local:8888/
   max_items_in_list: 50000
   zero_fill_filename: 4
   is_saving_pretty_xml: True
@@ -15,6 +15,6 @@ executor:
   description_dir: /Users/giorgio/Desktop/dit/resourcesync # root dir for source description
   elastic_host: localhost
   elastic_port: 9200
-  elastic_index: resourcesync
+  elastic_index: omtd-resourcesync
   elastic_resource_type: resource
   elastic_change_type: change
