--- a/config/populator.yaml
+++ b/config/populator.yaml
@@ -1,5 +1,5 @@
 populator:
-  publishers:
+  res_sets:
     - name: elsevier
       resources: /Users/giorgio/Desktop/dit/elsevier/metadata
       subfolders: ['']
@@ -10,7 +10,7 @@ populator:
       type: pdf
   elastic_host: localhost
   elastic_port: 9200
-  elastic_index: resourcesync
+  elastic_index: omtd-resourcesync
   elastic_resource_type: resource
   elastic_change_type: change
   res_root_dir: /Users/giorgio/Desktop/dit
