--- a/omtdrspub/elastic/test/resources/dit_elsevier_meta.yaml
+++ b/omtdrspub/elastic/test/resources/dit_elsevier_meta.yaml
@@ -1,11 +1,17 @@
 # Elsevier configuration
 
 executor:
-  res_set: elsevier
+  resource_set: elsevier
   res_type: metadata
+  elastic_host: localhost
+  elastic_port: 9200
+  elastic_index: test-resourcesync
+  elastic_resource_doc_type: resource
+  elastic_change_doc_type: change
+  res_root_dir: tmp/dit # root dir for resources
+
   resource_dir: tmp/dit # root dir for sitemaps
   metadata_dir: resourcesync/elsevier/metadata # rel dir for sitemaps
-  res_root_dir: tmp/dit # root dir for resources
   url_prefix: http://giorgios-macbook-pro.local:8888/
   max_items_in_list: 50000
   zero_fill_filename: 4
@@ -13,8 +19,3 @@ executor:
   is_saving_sitemaps: True
   has_wellknown_at_root: True
   description_dir: tmp/dit/resourcesync # root dir for source description
-  elastic_host: localhost
-  elastic_port: 9200
-  elastic_index: test-resourcesync
-  elastic_resource_type: resource
-  elastic_change_type: change
