--- a/omtdrspub/elastic/test/resources/dit_elsevier_meta.yaml
+++ b/omtdrspub/elastic/test/resources/dit_elsevier_meta.yaml
@@ -1,14 +1,14 @@
 # Elsevier configuration
 
 executor:
-  resource_set: elsevier
-  res_type: metadata
+  resource_set: elsevier-meta
   elastic_host: localhost
   elastic_port: 9200
   elastic_index: test-resourcesync
   elastic_resource_doc_type: resource
   elastic_change_doc_type: change
   res_root_dir: tmp/dit # root dir for resources
+  tmp_dir: metadata_tmp
 
   resource_dir: tmp/dit # root dir for sitemaps
   metadata_dir: resourcesync/elsevier/metadata # rel dir for sitemaps
